<resources>
    <string name="app_name">PetGarden</string>
    <string name="app_title">Pet Garden</string>
    <string name="logo_description">Application Logo</string>
    <string name="email">correo@ejemplo.com</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="login_with_facebook">Iniciar Sesion con facebook</string>
    <string name="login_with_google">Iniciar sesion con google</string>
    <string name="register">¿No tienes cuenta?. Registrate</string>

    <string name="name_question">¿Cual es tu nombre?</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="Next">Siguiente</string>
    <string name="terms_of_services">Estoy de acuerdo con los Terminos de servicio y Politica de Privacidad.</string>
    <string name="email_question">¿Cuál es tu correo electrónico?</string>
    <string name="birth_question">¿Cuándo naciste?</string>
    <string name="role_question">¿Eres dueño o cuidador?</string>
    <string name="pet_question">¿Qué tipo de mascota tienes?</string>
    <string name="dog">Perruno</string>
    <string name="cat">Gatuno</string>
    <string name="others">Otros</string>
    <string name="owner">Dueño</string>
    <string name="pet_care">Cuidador</string>
    <string name="pet_name_question">¿Cómo se llama tu mascota?</string>

    <string name="type_dog">Perro</string>
    <string name="type_cat">Gato</string>
    <string name="type_other">Otro</string>

    <string name="pet_age_question">¿Cuál es la edad de tu mascota?</string>
    <string name="ageOfPet">0</string>
    <string name="month_or_year">Años</string>
    <string name="pet_picture">¡Tomémosle una foto a tu mascota!</string>

    <string name="pet_recommendation_statement">Añade una recomendación para el cuidador</string>

    <string name="password_confirm">Confirme la contraseña</string>
    <string name="password_question">¿Cuál será tu\n contraseña?</string>
    <string name="email_example">alguien@correo.com</string>
    <string name="no_register_info">Correo o contraseña incorrecta</string>
    <string name="sign_in_google_error">No fue posible acceder mediante la cuenta Google</string>


    <string name="field_error">Este campo es obligatorio y no puede estar vacio porfavor llenelo</string>
    <string name="terms_message">Usted debe aceptar los terminos y condiciones de servicio si desea continuar</string>
    <string name="pass_confirm_message">Ambas contraseñas deben ser iguales</string>
    <string name="age_error">Usted debe ser mayor de 16 años para poder usar nuestros servicios</string>

    <string name="facebook_app_id">611470406121354</string>
    <string name="fb_login_protocol_scheme">fb611470406121354</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pet_breed_question">¿Qué raza es?</string>
    <string name="pet_weight_question">¿Cuál es el peso de tu mascota (Kg)?</string>
    <string name="title_activity_maps_delete">Map</string>
    <string name="current_password">Contraseña actual</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="change_password"><u>Cambiar contraseña</u></string>
    <string name="wrong_password">Contraseña Incorrecta</string>
    <string name="password_cannot_be_equals">La nueva contraseña no puede ser igual a la anterior</string>
    <string name="search_message">Buscar cuidadores por nombre</string>
    <string name="filter">Filtrar</string>
    <string name="user_picture">¡Tomate una foto!</string>
    <string name="takePhoto">Tomar una foto</string>
    <string name="chooseFromGallery">Seleccionar una de la Galeria</string>
    <string name="choose_picture">Selecciona una foto</string>
    <string name="set_availability">Fijar disponibilidad</string>
    <string name="request_service">Solicitar Servicio</string>

</resources>
