<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.register.PasswordRegisterFragment">


    <TextView
        style="@style/RegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_question"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/passInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        />

    <EditText
        android:id="@+id/passConfirmInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:inputType="textPassword"
        android:hint="@string/password_confirm"
        />

    <Button
        style="@style/AppButton"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/Next" />

</LinearLayout>