<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.register.user.NameRegisterFragment">

    <TextView
        style="@style/RegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role_question"
        android:textAlignment="center" />


    <Button
        style="@style/AppButton"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="16dp"
        android:text="@string/owner" />

    <Button
        style="@style/AppButton"
        android:layout_marginBottom="64dp"
        android:text="@string/pet_care" />



</LinearLayout>