<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.register.pet.PetAgeRegisterFragment">

        <TextView
            style="@style/RegisterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_age_question"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/down_arrow"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/ageOfPet"
                android:textSize="48sp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/up_arrow"/>



        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_or_year"
            android:layout_marginBottom="20dp"/>

        <Button
            style="@style/AppButton"
            android:id="@+id/nextButton"
            android:layout_marginBottom="64dp"
            android:text="@string/Next" />



</LinearLayout>