<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.NameRegisterFragment"
    android:gravity="center"
    android:orientation="vertical"
    >

    <TextView
        style="@style/RegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_question" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@string/name" />
            <EditText
                android:id="@+id/nameInput"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@string/last_name" />
            <EditText
                android:id="@+id/lastNameInput"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <Button style="@style/AppButton"
        android:id="@+id/nextButton"
        android:text="@string/Next"
        android:layout_marginBottom="64dp"/>

</LinearLayout>