<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.register.pet.PetTypeFragment">

    <TextView
        style="@style/RegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pet_question"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
    style="@style/AppButton"
    android:id="@+id/DogButton"
    android:layout_width="match_parent"
    android:layout_height="49dp"
    android:layout_marginBottom="24dp"
    android:layout_marginTop="30dp"
    android:gravity="center"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imgViewPerro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/perro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/AppButton"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:text="@string/dog"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/AppButton"
        android:id="@+id/CatButton"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/gato"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/AppButton"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:text="@string/cat"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/AppButton"
        android:id="@+id/OthersButton"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/otro_pet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/AppButton"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:text="@string/others"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>




</LinearLayout>